Fix header spacing

--- a/app/assets/stylesheets/__base.scss
+++ b/app/assets/stylesheets/__base.scss
@@ -15,6 +15,11 @@ fieldset > h2 {
   margin-bottom: 10px;
 }
 
+.hero__body {
+  padding-top: 30px;
+}
+
+
 @import "govuk";
 @import "breadcrumbs";
 @import "homepage";
